# polegato_mfp

./: CHANGELOG.md  CMakeLists.txt  FIXES.md  LICENSE  README.md  mfp.sh  rsa_factorization_test.cpp  rsa_key.pem  run_batch.sh
MFP_Results/: mfp.output.txt  mfp_performance_metrics.csv
docs/: enhanced_capabilities.md  mfp_implementation_documentation.md  mfp_system_architecture.md  mfp_test_plan.md
include/: configuration_manager.h  cpu_detector.h  cuda_accelerator.h  gpu_detector.h  memory_storage_detector.h  metal_accelerator.h  mfp_base.h  mfp_config.h.in  mfp_method1.h  mfp_method2.h  mfp_method3.h  mfp_system.h  parallel_framework.h  performance_monitor.h  prime_database.h  resource_manager.h
include/gpu/: cuda_accelerator.h  metal_accelerator.h
include/hardware/: cpu_detector.h  gpu_detector.h  memory_storage_detector.h
src/: configuration_manager.cpp  cpu_detector.cpp  cuda_accelerator.cpp  gpu_detector.cpp  main.cpp  memory_storage_detector.cpp  metal_accelerator.cpp  mfp_base.cpp  mfp_cli.cpp  mfp_method1.cpp  mfp_method2.cpp  mfp_method3.cpp  mfp_system.cpp  resource_manager.cpp
src/gpu/: cuda_accelerator.cpp  metal_accelerator.cpp
src/hardware/: cpu_detector.cpp  gpu_detector.cpp  memory_storage_detector.cpp
test/: CMakeLists.txt  system_test.cpp  test_composite.cpp  test_concurrent.cpp  test_mfp.cpp  test_prime.cpp  test_search_space_reduction.cpp
